[DOC] How to get the longest last match [Bug #18415]